doc: documentação atualizada
