# src/swagger_documentation.json
@@ -1,28 +1,21 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
-    "title": "Usuarios API",
+    "title": "Usuários API",
     "description": "Documentação da API de usuários"
   },
-  "host": "api-usuarios-seven.vercel.app",
-  "basePath": "/",
-  "schemes": [
-    "https"
-  ],
-  "securityDefinitions": {
-    "JWT": {
-      "description": "JWT token",
-      "type": "apiKey",
-      "in": "header",
-      "name": "Authorization"
+  "servers": [
+    {
+      "url": "https://api-usuarios-seven.vercel.app",
+      "description": "Servidor principal"
     }
-  },
-  "consumes": [
-    "application/json"
   ],
-  "produces": [
-    "application/json"
+  "tags": [
+    {
+      "name": "Usuários",
+      "description": "Operações relacionadas aos usuários"
+    }
   ],
   "paths": {
     "/usuarios": {
@@ -30,27 +23,8 @@
         "tags": [
           "Usuários"
         ],
-        "description": "Endpoint para criar um usuário.",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
+        "summary": "Criar usuário",
+        "description": "Endpoint para criar um usuário",
         "responses": {
           "201": {
             "description": "Created"
@@ -61,19 +35,37 @@
           "500": {
             "description": "Internal Server Error"
           }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "age": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
         }
       },
       "get": {
         "tags": [
           "Usuários"
         ],
-        "description": "Endpoint para buscar todos os usuários.",
+        "summary": "Obter usuários",
+        "description": "Endpoint para obter todos os usuários",
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -86,22 +78,21 @@
         "tags": [
           "Usuários"
         ],
-        "description": "Endpoint para buscar um usuário pelo ID.",
+        "summary": "Obter usuário pelo ID",
+        "description": "Endpoint para obter um usuário pelo ID",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID do usuário."
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "404": {
             "description": "Not Found"
@@ -115,31 +106,15 @@
         "tags": [
           "Usuários"
         ],
-        "description": "Endpoint para atualizar um usuário pelo ID.",
+        "summary": "Atualizar usuário pelo ID",
+        "description": "Endpoint para atualizar um usuário pelo ID",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID do usuário."
-          },
-          {
-            "name": "body",
-            "in": "body",
             "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                }
-              }
+              "type": "string"
             }
           }
         ],
@@ -152,6 +127,26 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "age": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       },
@@ -159,31 +154,15 @@
         "tags": [
           "Usuários"
         ],
-        "description": "Endpoint para deletar um usuário pelo ID.",
+        "summary": "Deletar usuário pelo ID",
+        "description": "Endpoint para deletar um usuário pelo ID",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "ID do usuário."
-          },
-          {
-            "name": "body",
-            "in": "body",
             "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                }
-              }
+              "type": "string"
             }
           }
         ],
@@ -197,45 +176,87 @@
           "500": {
             "description": "Internal Server Error"
           }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "age": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
         }
       }
     }
   },
-  "definitions": {
-    "User": {
-      "type": "object",
-      "properties": {
-        "type": {
-          "type": "string",
-          "example": "object"
-        },
+  "components": {
+    "securitySchemes": {
+      "JWT": {
+        "type": "apiKey",
+        "in": "header",
+        "name": "Authorization",
+        "description": "JWT token"
+      }
+    },
+    "schemas": {
+      "Usuario": {
+        "type": "object",
         "properties": {
-          "type": "object",
+          "type": {
+            "type": "string",
+            "example": "object"
+          },
           "properties": {
-            "name": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "John Doe"
+                  }
                 }
-              }
-            },
-            "email": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "string"
+              },
+              "email": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  },
+                  "example": {
+                    "type": "string",
+                    "example": "john.doe@example.com"
+                  }
                 }
-              }
-            },
-            "age": {
-              "type": "object",
-              "properties": {
-                "type": {
-                  "type": "string",
-                  "example": "integer"
+              },
+              "age": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "integer"
+                  },
+                  "example": {
+                    "type": "number",
+                    "example": 30
+                  }
                 }
               }
             }
